# mothership

./: .gitignore  CMakeLists.txt  README.md  main.cpp  spaceship.toml
headers/: environment.hpp  exec_pos.hpp  general_actions.hpp  generic_spaceship.hpp  hook.hpp  java_spaceship.hpp  java_utils.hpp  spaceship_utils.hpp
src/: general_actions.cpp  spaceship_utils.cpp
